--- a/aulas.Rmd
+++ b/aulas.Rmd
@@ -67,7 +67,7 @@ Todo o material das aulas pode ser acessados no cronograma baixo clicando-se os 
 
 -   Seminário 4
 
--   Exercícios de checagem de qualidade, padronização e roteiro reprodutível de aquisição e análise de dados macroecológicos
+-   Exercícios de confecção de roteiro reprodutível de aquisição e análise de dados macroecológicos
 
 -   Considerações finais da disciplina
 
