--- a/atividades.Rmd
+++ b/atividades.Rmd
@@ -76,7 +76,7 @@ A [**atividade 4**](atividade4.html).
 
 ## **Atividade 5** {.unnumbered}
 
-#### *Exercícios de checagem de qualidade, padronização e roteiro reprodutível de aquisição e análise de dados macroecológicos* {.unnumbered}
+#### *Exercícios de confecção de roteiro reprodutível de aquisição e análise de dados macroecológicos* {.unnumbered}
 
 <center><img src="images/data_cycle.png" style="width:50%"/></center>
 
