remove code folding

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ text-align: justify}
 
 > UENF - CBB - Laboratório de Ciências Ambientais (LCA)
 >
-> Professores: Cesar A. M. M. Cordeiro, Thiago C. Mendes (UFF) e Juan P. Quimbayo (CEBIMar/USP)
+> Professores: Cesar A. M. M. Cordeiro (LCA/UENF), Thiago C. Mendes (UFF e UFRJ) e Juan P. Quimbayo (CEBIMar/USP)
 
 ------------------------------------------------------------------------
 
