--- a/aulas.Rmd
+++ b/aulas.Rmd
@@ -49,6 +49,13 @@ Todo o material das aulas pode ser acessados no cronograma baixo clicando-se os 
 
 **Aula 4 - Segunda-feira (28/11 => 8:30 – 12:30 / 14:00 - 18:00)**
 
+-   **CANCELADA**
+
+
+**Aula 5 - Terça-feira (29/11 => 8:30 – 12:30 / 14:00 - 18:00)**
+
+-   Diversidade filogenética e funcional
+
 -   Barreiras biogeográficas
 
 -   Centros de diversidade e endemismo
@@ -56,20 +63,13 @@ Todo o material das aulas pode ser acessados no cronograma baixo clicando-se os 
 -   Seminário 3
 
 
-**Aula 5 - Terça-feira (29/11 => 8:30 – 12:30 / 14:00 - 18:00)**
-
--   Diversidade filogenética e funcional
-
--   Exercícios de cálculo de indicadores de diversidade funcional
-
--   Seminário 4
-
-
 **Aula 6 - Quarta-feira (30/11 => 8:30 – 12:30 / 14:00 - 18:00)**
 
 -   Macroecologia e conservação
 
--   Seminário 5
+-   Seminários 4 e 5
+
+-   Exercícios de cálculo de indicadores de diversidade funcional
 
 -   Exercícios de confecção de roteiro reprodutível de aquisição e análise de dados macroecológicos
 
